# BTL-Nhom1

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py  requirements.txt  server.py
backend/app/config/: logging_cfg.py
backend/app/middleware/: cors.py  http.py
backend/app/routers/: __init__.py  base.py  emotion_router.py  game_ws_router.py  redirect_router.py  stream_router.py
backend/app/schemas/: emotion_schema.py  face_schema.py
backend/app/templates/: index.html
backend/app/utils/: __init__.py  app_path.py  logger.py  utils.py
backend/src/emotion_classification/config/: detect_cfg.py  emotion_cfg.py
backend/src/emotion_classification/models/: emotion_predictor.py  load_model.py  resnet_model.py  yolo_detector.py
backend/templates/: index.html
frontend/: app.py  dashboard.html  game.html  index.html  requirements.txt
frontend/app/: main.py  resnet_func.py  utils.py  yolo_func.py
frontend/css/: game.css  home.css  style.css
frontend/game/: game.js  index.html  style.css
frontend/js/: game.js  script.js
notebook/: ProjectStructure.md  README.md  train_model.ipynb
src/emotion_classification/app_streamlit/: streamlit.py
src/emotion_classification/models/: load_model.py
src/emotion_classification/routers/: base.py
tests/: test_predictor.py
