[project]
name = "emotion-classification"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "kdieu4", email = "hoangthanhdieu2006@gmail.com"},
]
dependencies = ["torch>=2.7.1", "torchvision>=0.22.1"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
